--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Week 2 - Printing Output Assignment</title>
+</head>
+<body>
+    
+    <script src="./js/as2.js"></script>
 
+</body>
+</html>
